examples/errors/01_duplicated_variable/duplicated_variable.txy
proc main()
    # Pode
    var x: int = 0;
    if true then
        var x: float = 0f;
        var y: int = 1;
    endif;
    var y: int = 2;
    if true then
        var x: float = 0f;
        var y: int = 1;
    endif;

    # Não pode
    var y: int = 3;
endproc;